--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Famous Pawn — Daily Drops (Pictures Only)</title>
+  <title>Famous Pawn — Daily Drops </title>
   <meta name="description" content="Current inventory photos from Famous Pawn. Pictures only — quick gallery by category.">
   <link rel="stylesheet" href="assets/styles.css">
 </head>
@@ -13,7 +13,7 @@
     <img src="assets/logo.png" alt="Famous Pawn logo" width="40" height="40">
     <div>
       <h1>Famous Pawn — Daily Drops</h1>
-      <small>Pictures only • updated frequently</small>
+      <small>Pictures only updated frequently</small>
     </div>
   </div>
   <nav class="tabs" aria-label="Categories">
@@ -38,7 +38,7 @@
 </main>
 
 <footer>
-  <small>© <span id="year"></span> Famous Pawn — Pictures Only</small>
+  <small>© <span id="year"></span> Famous Pawn Jewelry & Loan</small>
 </footer>
 
 <div id="lightbox" hidden>
